[SYNCOPE-1435] New wicket enduser (#275)